--- a/Content Management Website/Front-End/css/index.css
+++ b/Content Management Website/Front-End/css/index.css
@@ -1,34 +1,110 @@
-.carousel-inner .carousel-item img{
-    height: 30rem;
+.background{
+    margin: 0;
+    padding: 0;
+    background-image: url('../assets/images/background.png');
+    height: 100vh;
+    background-size: cover;
+    background-position: top;
 }
 
-.card-div{
-    margin-top: 5%;
+.background .nav-options{
+   display: flex;
+   justify-content: right;
+   gap: 2rem;
+   padding: 2rem 3rem; 
+}
+
+.background .nav-options .btn{
+    cursor: pointer;
+    box-shadow: 0 0 0.3rem 0.2rem rgb(229, 202, 30);
+}
+
+
+.center-content{
     display: flex;
     justify-content: center;
-    gap: 20rem;
+    align-items: center;
+    width: 70vw;
+    height: 75vh;
+    color: aliceblue;
 }
 
-.card-div .card img{
-    height: 100%;
-    width: 100%;
+
+.center-content .content-header h1{
+    font-size: 3rem;
+    text-shadow: 0.2rem 0.2rem 0.3rem blue;
 }
 
-.card-div .card .card-body h5{
-    text-align: center;
+.center-content .content-header p{
+    font-size: 2rem;
+    font-weight: 600;
+    text-shadow: 0.2rem 0.2rem 0.3rem blue;
 }
 
-.card-div .card .card-body a{
-    text-align: center;
-    text-decoration: none;
+.center-content .content-header button{
+    transition: 0.3s;
 }
 
-footer{
-    margin-top: 5%;
-    padding: 2%;
+
+.center-content .content-header button:hover{
+    transform: scale(0.9);
 }
 
-body{
-    overflow-x: hidden;
-    scrollbar-width: none;
+
+.blogs-section{
+    background-image: linear-gradient(rgba(14, 33, 101, 0.7), rgba(14, 33, 101, 0.7)), url('../assets/images/background.jpg');
+    background-size: cover;
+    background-position: center;
 }
+
+
+.blogs-section .heading{
+    color: aliceblue;
+    text-shadow: 0.2rem 0.2rem 0.4rem rgb(27,227,204);
+    display: flex;
+    justify-content: center;
+    padding-top: 2rem;
+}
+
+.blogs-section .heading h1{
+    text-decoration: dotted;
+}
+
+.blogs-section .top-blogs{
+    padding-top: 2rem;
+    padding-bottom: 4rem;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.blogs-section .top-blogs .blog{
+    display: flex;
+    flex-direction: column;
+    width: 20%;
+    border: 1px solid white;
+    border-radius: 1rem;
+    background-color: rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(0.4rem);
+    color: white;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+
+.blogs-section .top-blogs .blog:hover{
+    transform: scale(1.1);
+    box-shadow: 0 0 0.4rem 0.3rem rgb(27, 227, 204);
+}
+
+.blogs-section .top-blogs .blog img{
+    border-radius: 1rem 1rem 0 0;
+}
+
+
+
+/* @media(max-width: 768px){
+    .background{
+        height: 50vh;
+    }
+} */
