--- a/Content Management Website/Front-End/css/index.css
+++ b/Content Management Website/Front-End/css/index.css
@@ -101,7 +101,179 @@
     border-radius: 1rem 1rem 0 0;
 }
 
+.blogs-section .top-blogs .blog h3{
+    padding: 0.5rem 1rem 0 1rem;
+    text-align: center;
+}
 
+.blogs-section .top-blogs .blog .author{
+    display: flex;
+    justify-content: center;
+    font-size: 0.8rem;
+    padding-right: 1rem;
+}
+
+.blogs-section .top-blogs .blog .date{
+    display: flex;
+    justify-content: center;
+    font-size: 0.8rem;
+    /* padding-right: 1rem; */
+}
+
+
+.blogs-section .top-blogs .blog p{
+    padding: 0 1rem 0 1rem;
+}
+
+
+.about{
+        /* background-color: grey;
+        height: 20rem; */
+    display: flex;
+}
+
+.about .one{
+    width: 25%;
+    background-color:#9AD0c2;
+    color: #265d73;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.about .one h1{
+    font-size: 2.5rem;
+}
+
+
+.about .two{
+    width: 75%;
+    background-color:#265d73;
+    color: #9AD0c2;
+    display: flex;
+    justify-content: center;
+    padding: 2rem 2rem ;
+}
+
+.about .two .person{
+    display: flex;
+}
+
+.about .two .person .person-info{
+    padding-left: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+
+.about .two .person img{
+    height: 8rem;
+    width: 8rem;
+    border-radius: 50%;
+    transform: scale(1.2);
+}
+
+
+.footer{
+    background-color: lightgrey
+}
+
+.footer .footer-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    gap: 1.5rem;
+    padding-top: 2rem;
+}
+
+.footer .footer-container .logo{
+    margin-left: 1rem;
+}
+
+/* .footer .footer-container .box h3,
+.footer .footer-container .box p{
+    color: black;
+} */
+
+
+
+.footer .footer-container .box .share a i{
+    height: 4rem;
+    height: 4rem;
+    line-height: 4rem;    
+    font-size: 2rem;
+    border-radius: 0.5rem;
+    /* margin-left: 0.2rem; */
+    /* background: #265073; */
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    transition: 0.4s;
+}
+
+.footer .footer-container .box .share a i:hover{
+    transform: scale(0.7);
+}
+
+.footer .footer-container .box .share a i{
+    padding-right: 0.5rem;
+}
+
+.footer .footer-container .box .links{
+    display: block;
+    font-size: 1rem;
+    color: black;
+    padding: 0.4rem 0;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.footer .footer-container .box .links i{
+    padding-right: 0.5rem;
+    transition: 0.4s;
+}
+
+.footer .footer-container .box .links:hover i{
+    padding-right: 1.5rem;
+}
+
+
+.footer .footer-container .newsletter .email{
+    height: 2.5rem;
+    width: 80%; 
+    border-radius: 0.5rem;
+    margin-bottom: 1rem;
+    border: none;
+    /* padding-left: 0.5rem; */
+}
+
+.footer .footer-container .newsletter .email .email{
+    padding-left: 0.5rem;
+}
+
+
+.footer .footer-container .newsletter .email:focus{
+    outline: none;
+    box-shadow: 0 0 0.4rem 0.4rem rgb(27, 227,204);
+}
+
+
+
+.footer .footer-container .newsletter .btn{
+    transition: 0.3s;
+}
+
+.footer .footer-container .newsletter .btn:hover{
+    transform: scale(0.9);
+}
+
+
+.footer .credits{
+    color: black;
+    text-align: center;
+    padding-bottom: 1rem;
+    margin-top: 1rem;
+}
 
 /* @media(max-width: 768px){
     .background{
