--- a/Content Management Website/Front-End/css/login.css
+++ b/Content Management Website/Front-End/css/login.css
@@ -1,65 +1,146 @@
-.login-box{
-    border: 2px solid black;
-    justify-content: center;
-    align-items: center;
-    /* display: flex; */
-    width: 25%;   
-    padding: 2%;
-    background-color:azure;
-    border-radius: 2rem;
-}
-
-.page-container{
-    justify-content: center;
-    align-items: center;
-    display: flex;   
+body{
+    margin: 0;
+    padding: 0;
+    background-image: url(../assets/images/cover.jpg);
     height: 100vh;
+    /* background-size: cover; */
+    /* background-position: center; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.page-container .login-box .login-button{
+
+.login-card{
+    background: rgba(0, 0, 0, 0.1);
+    backdrop-filter:blur(0.4rem);
+    border: 2px solid black;
+    border-radius: 2rem;
+    padding: 2rem;
+    box-shadow: 0.4rem 0.4rem 0.8rem rgb(27, 227, 204);
+    color: white;
+}
+
+.login-card h1{
     text-align: center;
-    margin-bottom: 1rem;
+    /* color: black; */
+    color: white;
+    text-shadow: 0.2rem 0.2rem 0.4rem rgb(27, 227, 204);
+    margin-bottom: 2rem;
 }
 
-.form-header{
-    padding-left: 35%;
-    padding-bottom: 10%;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: x-large;
-    font-weight: bolder;
+.login-card .box{
+    width: 100%;
+    display: flex;
+    margin-bottom: 1.5rem;
+    align-items: center;
+    border-bottom: 1px solid black;
 }
 
-.page-container .login-box #email-error{
-    color: red;
+.login-card .box .input-box{
+    width: 100%;
+    height: 2.5rem;
+    padding-left: 1rem;
+    outline: none;
+    border: none;
+    background: transparent;
+    /* color: black; */
+    color: white;
+    font-size: 1.3rem;
+    font-weight: 600;
 }
 
-.page-container .login-box #password-error{
-    color: red;
+.login-card .box .input-box::placeholder{
+    color: rgba(255, 255, 255, 0.5);
 }
 
 
-.page-container .login-box #submit-error{
-    color: red;
-    text-align: center;
+#eye2{
+    display: none;
+}
+
+.login-card .box .icon-eye{
+    cursor: pointer;
+}
+
+.login-card .check input{
+    transform:scale(1.2);
+    margin-right: 0.5rem;
+}
+
+.login-card .check input:checked{
+    accent-color: white;
+}
+
+.login-card .check span{
+    color: white;
+    font-weight: 600;
+}
+
+.login-card .login-btn{
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+}
+
+.login-card .login-btn button{
+    width: 60%;
+    transition: 0.3s;
+    font-size: large;
+}
+
+.login-card .login-btn button:hover{
+    transform: scale(0.9);
+}
+
+.login-card .register-link{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1rem;
+}
+
+.login-card .register-link a{
+    color: white;
+    font-weight: 600;
+    text-decoration: none;
+    border-bottom: 0.05rem solid rgb(27, 227, 204);
+    transition:  0.3s;
+    cursor: pointer;
 }
 
 
-.valid {
-    color: green;
-}
-  
-.valid:before {
-    /* position: relative; */
-    left: -35px;
-    content: "✔";
+.login-card .register-link a:hover{
+    transform: scale(1.2);
+    text-shadow: 0.2rem 0.2rem 0.4rem rgb(27,227,208);
 }
 
-.invalid {
-    color: red; 
+
+
+
+.modal .modal-dialog .modal-content{
+    border: 0.1rem solid white;
+    border-radius: 2rem;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(0.4rem);
 }
 
-.invalid:before {
-    /* position: relative; */
-    left: -35px;
-    content: "✖";
+
+.modal .modal-dialog .modal-content .modal-header h1{
+    color: white;
 }
+
+.modal .modal-dialog .modal-content .modal-body{
+    display: flex;
+    justify-content: center;
+}
+
+.modal .modal-dialog .modal-content .modal-header{
+    color: white;
+}
+
+.modal .modal-dialog .modal-content .modal-footer{
+    display: flex;
+    justify-content: center;
+}
+
+
