--- a/Content Management Website/Front-End/css/register.css
+++ b/Content Management Website/Front-End/css/register.css
@@ -1,40 +1,122 @@
-.register-box{
-    border: 2px solid black;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    width: 50%;   
-    padding: 1%;
-    background-color:azure;
-    border-radius: 2rem;
-}
-
-.page-container{
-    justify-content: center;
-    align-items: center;
-    display: flex;   
+body{
+    margin: 0;
+    padding: 0;
+    background-image: url(../assets/images/cover.jpg);
     height: 100vh;
-}
-
-.page-container .register-box .register-button{
-    text-align: center;
-    margin-bottom: 1rem;
-}
-
-.page-container .register-box p{
-    text-align: center;
-}
-
-
-.form-header{
-    text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: x-large;
-    font-weight: bolder;
-}
-
-
-.page-container .register-box .inner-form-div{
+    /* background-size: cover; */
+    /* background-position: center; */
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.register-card{
+    background: rgba(0, 0, 0, 0.1);
+    backdrop-filter:blur(0.4rem);
+    border: 2px solid black;
+    border-radius: 2rem;
+    padding: 2rem;
+    box-shadow: 0.4rem 0.4rem 0.8rem rgb(27, 227, 204);
+    color: white;
+}
+
+.register-card h1{
+    text-align: center;
+    /* color: black; */
+    color: white;
+    text-shadow: 0.2rem 0.2rem 0.4rem rgb(27, 227, 204);
     margin-bottom: 2rem;
 }
+
+.register-card .box{
+    width: 100%;
+    display: flex;
+    margin-bottom: 1.5rem;
+    align-items: center;
+    border-bottom: 1px solid black;
+}
+
+.register-card .box .input-box{
+    width: 100%;
+    height: 2.5rem;
+    padding-left: 1rem;
+    outline: none;
+    border: none;
+    background: transparent;
+    /* color: black; */
+    color: white;
+    font-size: 1.3rem;
+    font-weight: 600;
+}
+
+.register-card .box .input-box::placeholder{
+    color: rgba(255, 255, 255, 0.5);
+}
+
+
+#eye2, #eye4{
+    display: none;
+}
+
+
+
+.register-card .box .icon-eye{
+    cursor: pointer;
+}
+
+.register-card .check input{
+    transform:scale(1.2);
+    margin-right: 0.5rem;
+}
+
+.register-card .check input:checked{
+    accent-color: white;
+}
+
+.register-card .check span{
+    color: white;
+    font-weight: 600;
+}
+
+.register-card .register-btn{
+    display: flex;
+    justify-content: center;
+    margin-top: 2rem;
+}
+
+.register-card .register-btn button{
+    width: 60%;
+    transition: 0.3s;
+    font-size: large;
+}
+
+.register-card .register-btn button:hover{
+    transform: scale(0.9);
+}
+
+.register-card .login-link{
+    display: flex;
+    justify-content: center;
+    margin-top: 1rem;
+}
+
+.register-card .login-link a{
+    color: white;
+    font-weight: 600;
+    text-decoration: none;
+    border-bottom: 0.05rem solid rgb(27, 227, 204);
+    transition:  0.3s;
+    cursor: pointer;
+}
+
+
+.register-card .login-link a:hover{
+    transform: scale(1.2);
+    text-shadow: 0.2rem 0.2rem 0.4rem rgb(27,227,208);
+}
+
+
+
+
+
