--- a/devsearch/env/devsearch/users/templates/users/account.html
+++ b/devsearch/env/devsearch/users/templates/users/account.html
@@ -34,7 +34,7 @@
             </div>
           </div>
         </div>
-        <div class="column column--2of3">
+        <div class="column column--2of3" style="max-width: 60%">
           <div class="devInfo">
             <h3 class="devInfo__title">About Me</h3>
             <p class="devInfo__about">
@@ -77,9 +77,9 @@
               </td>
               <td class="settings__tableInfo">
                 <a href="{% url 'project' project.id %}">{{project.title}}</a>
-                <p>
-                  {{project.description | slice:"150"}}
-                </p>
+                  <p>
+                    {{project.description | slice:'50'}}
+                  </p>
               </td>
               <td class="settings__tableActions">
                 <a class="tag tag--pill tag--main settings__btn" href="{% url 'update-project' project.id %}"><i class="fa-regular fa-pen-to-square"></i> 
