--- a/devsearch/env/devsearch/projects/templates/projects/projects.html
+++ b/devsearch/env/devsearch/projects/templates/projects/projects.html
@@ -12,7 +12,7 @@
         </div>
 
         <div class="hero-section__search">
-          <form class="form" action="{% url 'projects' %}" method="get">
+          <form id="searchForm" class="form" action="{% url 'projects' %}" method="get">
             <div class="form__field">
               <label for="formInput#search">Search By Projects </label>
               <input class="input input--text" id="formInput#search" type="text" name="search_query"
@@ -55,10 +55,10 @@
           </div>
         
         {% endfor %}
-
         </div>
       </div>
     </section>
+    {% include 'pagination.html' with queryset=projects custom_range=custom_range %}
   </main>
  
 {% endblock content %}
