--- a/devsearch/env/devsearch/static/styles/app.css
+++ b/devsearch/env/devsearch/static/styles/app.css
@@ -641,7 +641,7 @@ img {
 .auth {
   width: 100%;
   position: relative;
-  z-index: 1;
+  /* z-index: 1; */
   background: transparent;
   height: 99vh;
   display: flex;
