--- a/devsearch/env/devsearch/templates/main.html
+++ b/devsearch/env/devsearch/templates/main.html
@@ -14,20 +14,22 @@
         <link rel="stylesheet" href="{% static 'uikit/styles/uikit.css' %}" /> 
         <!-- Dev Search UI -->
         <link rel="stylesheet" href="{% static 'styles/app.css' %}" /> 
-      
+        <link rel="stylesheet" href="{% static 'styles/main.css' %}" /> 
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/highlight.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.2.0/languages/javascript.min.js"></script>
+              
         <title>DevSearch - Connect with Developers!</title>    
     </head>
     <body> 
         {% include 'navbar.html' %}
 
         {% if messages %}
-        <ul class="messages">
             {% for message in messages %}
-            <li {% if message.tags %} class="{{ message.tags }}" {% endif %}>
-                {{ message }}
-            </li>
+            <div class="alert alert--{{message.tags}}" style="z-index: 1;">
+                <p class="alert__message">{{message}}</p>
+                <button class="alert__close">X</button>
+            </div>
             {% endfor %}
-        </ul>
         {% endif %}
         
         {% block content %}
@@ -35,4 +37,6 @@
         {% endblock content %}
 
     </body>
+    <script src="{% static 'uikit/app.js' %}"></script>
+    <script src="{% static 'js/main.js' %}"></script>
 </html>
